<resources>
    <string name="app_name">AgileGame</string>
    <string name="action_settings">Settings</string>
    <string name="quit_button_text">Quit</string>
    <string name="summary_button_text">Summary</string>
    <string name="help_button_text">Did you know ?</string>
    <string name="calendar_button_text">Calendar</string>
    <string name="simulate_button_text">Simulate</string>
    <string name="budget_text">Budget:\n0 $</string>
    <string name="title_activity_manager">Manager</string>
    <string name="programmers_list_title">My Team</string>
    <string name="tasks_list_title">Tasks of the project</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="recruit_programmers_button">Recruit</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="salary">Salary : %1$d $</string>
    <string name="interested">Interested in : \n</string>
    <string name="skills">Skills : \n</string>
    <string name="level">%1$s level %2$d\n</string>
    <string name="fired">Will be fired in %1$d months </string>
    <string name="fire">Fire</string>
    <string name="hire">Hire</string>
    <string name="budget_dynamic">Budget %1$s \n</string>
    <string name="reset_btn">Reset</string>

    <!--  String for events -->

    <string-array name="event_interests_name_array">
        <item>E3</item>
        <item>Oracle Conference</item>
        <item>Open Source Festival</item>
        <item>Sudoku Championship</item>
        <item>Salon de l\'auto</item>
        <item>Team Building activity</item>
        <item>Presentation of the bilan</item>
        <item>SpaceX launching</item>
        <item>Syndicalist Manifestation</item>
    </string-array>

    <!--  String for persons name -->

    <string-array name="persons">
        <item>Laurent Vanosmael</item>
        <item>Laurent Mathy</item>
        <item>Tom Barbette</item>
        <item>Sylvain Dazy</item>
        <item>Thomas Dubois</item>
        <item>Thomas Lambert</item>
        <item>Olivier Gérard</item>
        <item>Guy Leduc</item>
        <item>Quentin Louveaux</item>
        <item>Pierre Wolper</item>
        <item>Bernard Boigelot</item>
        <item>Benoit Donnet</item>
        <item>Lise Vaneukem</item>
        <item>Jérémie Thiébaut</item>
        <item>Nicolas Marenne</item>
        <item>Maxime Gillet</item>
        <item>Antoine Engelen</item>
        <item>Florian Moyen</item>
        <item>Thomas Jeanmoye</item>
        <item>Romain Albert</item>
        <item>Philippe Leroy</item>
        <item>Tom Istaz</item>
        <item>Pascal Leroy Jr</item>
        <item>Romain Pitchot</item>
        <item>Charles Albert</item>
        <item>Mathieu Paesmans</item>
        <item>Quentin Plumier</item>
        <item>Stephane Rauw</item>
        <item>Benjamin Scalais</item>
        <item>Pascal Scholzen</item>
        <item>Thibault Manders</item>
        <item>Olivier Dumont</item>
        <item>Guillaume Henrotte</item>
        <item>Xavier Claessens</item>
        <item>Arthur Guerin</item>
        <item>Benoît Mattheus</item>
        <item>Cedric Marchal</item>
        <item>Florent Colet</item>
        <item>Julien Olla</item>
        <item>Etienne Archambeau</item>
        <item>Heloise Dubois</item>
        <item>Manon Heuveneers</item>
        <item>Mathieu Cop</item>
        <item>Francois Delvaux</item>
        <item>Helene Hendrickx</item>
        <item>Kathleen Jacquerie</item>
        <item>Laurie Pazienza</item>
        <item>Celine Deubel</item>
        <item>Pauline Mosh</item>
        <item>Tom Crasset</item>
    </string-array>

    <!--  String for features -->
    <string-array name="features_JAVA">
        <item>Binary Search Algorithm</item>
        <item>Back End implementation</item>
        <item>Menu clickable</item>
    </string-array>
    <string-array name="features_NETWORK">
        <item>Configure Server</item>
        <item>Upgrade Server</item>
        <item>Buy Server</item>
    </string-array>
    <string-array name="features_DESIGN">
        <item>Front end implementation</item>
        <item>Little flower on the right</item>
        <item>Nice and cool menu</item>
    </string-array>
    <string-array name="features_DIAGRAMS">
        <item>Design Pattern</item>
        <item>High level diagram</item>
        <item>Use cases</item>
    </string-array>
    <string-array name="features_ANDROID">
        <item>Android compatibility</item>
        <item>Upgrade version</item>
        <item>Buy a new phone</item>
    </string-array>

    <string-array name="events_features_name_array">
        <item>Server crash</item>
        <item>Client come to check</item>
        <item>I split coffee on the diagram</item>
        <item>We don\'t need this anymore</item>
    </string-array>


    <!--  String for help -->
    <string-array name="help">
        <item>Once you hit the simulate button there is no going back</item>
        <item>The agile methodology is based on the  Agile Manifesto </item>
        <item>This game was made as a university project</item>
        <item>If you fire a programmer he will have to work 3 more month but without motivation</item>
        <item>Programmer are happy to learn if they do not have a skill they will read books</item>
        <item>Scrum is not the only way to do Agile</item>
        <item>Waterfall is evil</item>
        <item>Windows sucks</item>
    </string-array>


    <!--  String for summary -->
    <string name="has_participated">\n\t has participated in %1$s</string>
    <string name="is_now_level">\n\t is now level %1$d in %2$s </string>
    <string name="has_worked">\n\t has worked %1$.2f on %2$s</string>
    <string name="there_was">\n\t there was %1$s</string>
    <string name="complete">\n\t is now complete</string>
    <string name="cancel">\n\t has been canceled</string>
    <string name="progress">\n\t has progress of %1$.2f </string>
    <string name="title_activity_summary_activity">Summary</string>
    <string name="budget">Budget</string>
    <string name="start_budget">\n\t Start budget : %1$s </string>
    <string name="salaries">\n\t Depenses : %1$s </string>
    <string name="new_budget">\n\t New Budget : %1$s </string>


    <!-- Menu items -->
    <string name="new_easy">New Game (Easy)</string>
    <string name="new_medium">New Game (Medium)</string>
    <string name="new_hard">New Game (Hard)</string>

    <!-- Game Over -->
    <string name="end">This is the end</string>
    <string name="game_over">Game Over : \n  %1$s \n Time elapsed : %2$d months \n Remaining budget : %3$d \n Final Score : %4$d</string>
    <string name="win">You have WIN !</string>
    <string name="lose">You have LOSE !</string>

</resources>
