<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/header"
        android:layout_alignParentTop="true"
        android:weightSum=".99"
        style="?android:attr/buttonBarStyle" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit_button_text"
            android:id="@+id/quit_button"
            android:layout_weight=".33"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summary_button_text"
            android:id="@+id/summary_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight=".33"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_button_text"
            android:id="@+id/help_button"
            android:layout_gravity="end"
            android:layout_weight=".33"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/body"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:baselineAligned="false"
        android:weightSum="1.0" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/team_list"
            android:layout_weight="0.50"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/programmers_list_title"
                android:text="@string/programmers_list_title"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recruit_programmers_button"
                android:id="@+id/recruit_btn" />

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/programmers" >
            </ListView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tasks_list"
            android:layout_weight="0.50"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tasks_list_title"
                android:text="@string/tasks_list_title"
                android:layout_gravity="center_horizontal" />

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tasks" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/footer"
        android:layout_alignParentBottom="true"
        android:weightSum=".99"
        style="?android:attr/buttonBarStyle" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget_text"
            android:id="@+id/budget_textView"
            android:layout_weight=".33"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_button_text"
            android:id="@+id/calendar_button"
            android:layout_weight=".33"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simulate_button_text"
            android:id="@+id/simulate_button"
            android:layout_weight=".33"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</RelativeLayout>
